# suumo_scrapy

./: pyproject.toml  scrapy.cfg
suumo_scrapy/: items.py  middlewares.py  pipelines.py  settings.py
suumo_scrapy/spiders/: suumo.py
