[build-system]
requires = ["poetry>=1.0.0",]
build-backend = "poetry.masonry.api"

[tool.poetry]
version = "0.0.1"
name = "suumo_scrapy"
authors = [ "wakame <hotwater1367@gmail.com>",]
description = ""
readme = "README.md"
license = "MIT"
homepage = ""
repository = "https://github.com/wakamezake/suumo_scrapy.git"

[tool.poetry.dependencies]
python = "^3.6.1"
Scrapy = "^2.3.0"

[tool.poetry.dev-dependencies]

